PlzNavigate: set the error code in NavigationHandle on abort

This CL ensures that when a NavigationThrottle aborts a navigation, the
rigth error code of net::ERR_ABORTED will be set on the NavigationHandle
when PlzNavigate is enabled.

BUG=681029
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2657813004
Cr-Commit-Position: refs/heads/master@{#449030}

Former-commit-id: 54b81d6a37ba2a48bfd34bf42d954e4c8fe56d93